Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)
 
 o added persistent session+subscription support in c++

 o Global.detachJdbcManagerCommonTable() removed (was obsolete)

 o the EntryFactories are now threadsafe and the Global.getEntryFactory now
   does not take any name and the factory is a singleton. EntryFactory.getName
   does not exist anymore. I_StoragePlugin.getType can be used instead
 
 o added XmlScriptInterpreter which can execute xmlBlaster commands from an
   xml file (in a way similar to ant, maven and jelly)

 o Nested key tags are now allowed inside key
 
 o added a new class EncodableData (ClientProperty now extends from it)
  
 o elimintated MsgTopicErrorHandler since used nowere

 o Changed build.xml for C and C++ compilation
   Now the source files are copied to a separate destination
   To build C or C++ do a cleanup first (before you checkout the new code):
     build c-delete
     build cpp-delete
   or remove the outdated msgUtil_CopyByAnt.c and Global_CopyByAnt.cpp files manually

 o C++ client library (Incompatible API change):
   - The update() method argument 'content' has changed from
     'void *' to 'const unsigned char *'
   - The global.getLog() method now returns the interface I_Log (an abstract class)
     to the logging framework instead of the Log.cpp implementation itself.
     This allows pluggin in your own logging framework

 o C++ client library:
   - xmlBlaster.properties is read (-propertyFile ... or in $HOME or in $XMLBLASTER_HOME)
   - Added native SOCKET protocol plugin based on the C-client library
   - Added logging abstraction interface to support different logging implementations
   - Added log4cplus 1.0.1 logging library to xmlBlaster distribution
     see http://log4cplus.sourceforge.net
   - Fixed command line usage, try 'HelloWorld2 -help'
   - Fixed memory leak for some XmlBlasterExceptions thrown
   - Logging cleanup (switchable xterm colors)
   - Added Global::getCompiler()